--- a/app/src/main/res/layout/fragment_prayers_content.xml
+++ b/app/src/main/res/layout/fragment_prayers_content.xml
@@ -2,11 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/activity_horizontal_margin"
     tools:context="afterapps.meeqat.fragments.FragmentPrayersContent">
 
     <TextView
+        android:id="@+id/test_text_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/test_text_view" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
