--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dot_indicator_bottom_margin">8dp</dimen>
+    <dimen name="dot_indicator_overlap_padding">16dp</dimen>
+    <dimen name="fab_overlap_padding">88dp</dimen>
 </resources>
