-fully functional, first commit

--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -5,7 +5,7 @@
     android:id="@+id/places_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ActivityPlaces">
+    tools:context=".activities.ActivityLocations">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -15,7 +15,8 @@
             android:id="@+id/activity_places_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary">
+            android:background="?attr/colorPrimary"
+            app:titleTextColor="@color/app_bar_text">
 
             <ProgressBar
                 android:id="@+id/places_progress"
