--- a/app/src/main/res/menu/activity_prayers_menu.xml
+++ b/app/src/main/res/menu/activity_prayers_menu.xml
@@ -3,7 +3,8 @@
 
     <item
         android:id="@+id/action_location"
-        android:title="@string/action_places"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_location"
+        android:title="@string/action_location"
+        app:showAsAction="always" />
 
 </menu>
