--- a/app/src/main/res/layout/activity_prayers.xml
+++ b/app/src/main/res/layout/activity_prayers.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,7 +13,100 @@
             android:id="@+id/activity_prayers_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary" />
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:titleTextColor="@color/app_bar_text">
+
+            <ProgressBar
+                android:id="@+id/prayers_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="@dimen/fab_margin"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/prayers_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@drawable/ic_error"
+                android:visibility="gone"
+                tools:ignore="ContentDescription" />
+
+        </android.support.v7.widget.Toolbar>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+
+            <LinearLayout
+                android:id="@+id/next_prayer_view_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/next_prayer_title_text_view"
+                    style="@style/Base.TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:text="@string/app_bar_title"
+                    android:textColor="@color/app_bar_text" />
+
+                <TextView
+                    android:id="@+id/next_prayer_time_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/app_bar_text"
+                    android:textSize="@dimen/text_size_next_prayer" />
+
+                <TextView
+                    android:id="@+id/next_prayer_subtitle_text_view"
+                    style="@style/Base.TextAppearance.AppCompat.Subhead"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif"
+                    android:textColor="@color/app_bar_text" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/anchor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_next_prayer"
+                android:text="@string/anchor"
+                android:textColor="@color/anchor"
+                tools:ignore="RelativeOverlap" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:gravity="end"
+                android:layout_toEndOf="@id/anchor"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/anchor">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:src="@drawable/mosque_white"
+                    tools:ignore="ContentDescription" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -20,8 +114,6 @@
         android:id="@+id/prayers_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/dot_indicator_overlap_padding"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.matthewtamlin.sliding_intro_screen_library.indicators.DotIndicator
@@ -30,6 +122,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginBottom="@dimen/dot_indicator_bottom_margin"
-        app:numberOfDots="2" />
+        app:numberOfDots="2"
+        app:selectedDotColor="@color/colorPrimary"
+        app:unselectedDotColor="@color/colorPrimary" />
 
 </android.support.design.widget.CoordinatorLayout>
