--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="primary_text">#FFFFFF</color>
+    <color name="primary_text">#D9000000</color>
+    <color name="app_bar_text">#FFFFFF</color>
+    <color name="divider_black">#26000000</color>
+    <color name="anchor">#00000000</color>
 </resources>
