-highlighting next prayer and greying out past ones -changed icons; switched to Iconics -added animated sun/moon/stars to mosque -touch-ups

--- a/app/src/main/res/menu/activity_prayers_menu.xml
+++ b/app/src/main/res/menu/activity_prayers_menu.xml
@@ -5,6 +5,11 @@
         android:id="@+id/action_location"
         android:icon="@drawable/ic_location"
         android:title="@string/action_location"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_libraries"
+        android:title="@string/action_libraries"
+        app:showAsAction="never" />
 
 </menu>
