--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="primary_text">#D9000000</color>
     <color name="app_bar_text">#FFFFFF</color>
     <color name="divider_black">#26000000</color>
-    <color name="anchor">#00000000</color>
+    <color name="mosque_anchor">#00000000</color>
+    <color name="secondary_text">#36000000</color>
 </resources>
