--- a/app/src/main/res/layout/fragment_prayers_content.xml
+++ b/app/src/main/res/layout/fragment_prayers_content.xml
@@ -7,5 +7,7 @@
         android:id="@+id/prayers_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:overScrollMode="never" />
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:paddingBottom="@dimen/activity_vertical_margin" />
 </LinearLayout>
