--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorAccent">#4CAF50</color>
     <color name="primary_text">#D9000000</color>
     <color name="app_bar_text">#FFFFFF</color>
     <color name="divider_black">#26000000</color>
     <color name="mosque_anchor">#00000000</color>
-    <color name="secondary_text">#36000000</color>
+    <color name="secondary_text">#8c000000</color>
 </resources>
