--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="text_size_primary">16sp</dimen>
     <dimen name="text_size_secondary">14sp</dimen>
     <dimen name="divider_padding">68dp</dimen>
+    <dimen name="connection_error_icon">68dp</dimen>
+
 </resources>
