-new moon icon -prayers list refreshes more reliably -app bar main layout tweaks -fixed a typo, some touch-ups

--- a/app/src/main/res/layout-land/app_bar_prayers.xml
+++ b/app/src/main/res/layout-land/app_bar_prayers.xml
@@ -10,6 +10,7 @@
         android:id="@+id/activity_prayers_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        app:layout_scrollFlags="scroll|enterAlways"
         app:titleTextColor="@color/app_bar_main_text">
 
     </android.support.v7.widget.Toolbar>
