--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:titleTextColor="@color/app_bar_text">
+            app:titleTextColor="@color/app_bar_main_text">
 
             <ProgressBar
                 android:id="@+id/places_progress"
