--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#455A64</color>
     <color name="colorAccent">#4CAF50</color>
     <color name="primary_text">#D9000000</color>
-    <color name="app_bar_text">#FFFFFF</color>
+    <color name="app_bar_main_text">#D9FFFFFF</color>
+    <color name="app_bar_secondary_text">#8CFFFFFF</color>
     <color name="divider_black">#26000000</color>
     <color name="mosque_anchor">#00000000</color>
     <color name="secondary_text">#8c000000</color>
