--- a/app/src/main/res/layout-land/app_bar_prayers.xml
+++ b/app/src/main/res/layout-land/app_bar_prayers.xml
@@ -79,6 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:adjustViewBounds="true"
                 android:src="@drawable/mosque_white"
                 tools:ignore="ContentDescription" />
 
