--- a/app/src/main/res/layout-land/app_bar_prayers.xml
+++ b/app/src/main/res/layout-land/app_bar_prayers.xml
@@ -21,6 +21,7 @@
         android:orientation="horizontal"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         tools:ignore="RtlSymmetry">
 
         <LinearLayout
@@ -79,6 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:adjustViewBounds="true"
                 android:src="@drawable/mosque_white"
                 tools:ignore="ContentDescription" />
 
