--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_margin="@dimen/fab_margin"
+                android:layout_margin="@dimen/toolbar_progress_margin"
                 android:visibility="gone" />
 
         </android.support.v7.widget.Toolbar>
@@ -34,18 +34,8 @@
         android:id="@+id/places_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
         android:overScrollMode="ifContentScrolls"
-        android:paddingBottom="@dimen/fab_overlap_padding"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/places_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add" />
 
 </android.support.design.widget.CoordinatorLayout>
 
