--- a/app/src/main/res/layout/item_places.xml
+++ b/app/src/main/res/layout/item_places.xml
@@ -1,15 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/places_item_name_text_view"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_places_item_parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerVertical="true"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:gravity="center_vertical"
-    android:minHeight="?attr/listPreferredItemHeight"
-    android:paddingEnd="@dimen/activity_horizontal_margin"
-    android:paddingStart="@dimen/activity_horizontal_margin"
-    android:text="@string/placeholder"
-    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+    android:minHeight="?attr/listPreferredItemHeight">
+
+    <RadioButton
+        android:id="@+id/item_places_radio_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:clickable="false"
+        android:focusable="false"
+        app:buttonTint="@color/colorAccent" />
+
+    <ImageView
+        android:id="@+id/item_places_item_delete_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="?attr/listPreferredItemHeight"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:src="@drawable/ic_delete"
+        android:tint="@color/colorPrimary"
+        tools:ignore="ContentDescription" />
+
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/places_item_name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/item_places_radio_button"
+        android:layout_toLeftOf="@id/item_places_item_delete_icon"
+        android:layout_toRightOf="@id/item_places_radio_button"
+        android:layout_toStartOf="@id/item_places_item_delete_icon"
+        android:ellipsize="end"
+        android:text="@string/placeholder"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+</RelativeLayout>
