--- a/app/src/main/res/menu/activity_prayers_menu.xml
+++ b/app/src/main/res/menu/activity_prayers_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/action_location"
-        android:icon="@drawable/ic_location"
+        android:icon="@drawable/ic_add_location"
         android:title="@string/action_location"
         app:showAsAction="ifRoom" />
 
