--- a/app/src/main/res/layout/app_bar_prayers.xml
+++ b/app/src/main/res/layout/app_bar_prayers.xml
@@ -78,6 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:id="@+id/mosque_image_view"
                 android:adjustViewBounds="true"
                 android:src="@drawable/mosque_white"
                 tools:ignore="ContentDescription" />
@@ -86,17 +87,10 @@
 
         <ImageView
             android:id="@+id/animating_image_view"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_alignBottom="@id/mosque_parent"
-            android:layout_alignEnd="@id/mosque_parent"
-            android:layout_alignRight="@id/mosque_parent"
-            android:layout_marginEnd="@dimen/divider_padding"
-            android:layout_marginRight="@dimen/divider_padding"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:alpha="0"
-            android:translationZ="-1dp"
-            tools:ignore="ContentDescription"
-            tools:targetApi="lollipop" />
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
