--- a/app/src/main/res/layout/item_prayer.xml
+++ b/app/src/main/res/layout/item_prayer.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:alpha="0.9"
             android:adjustViewBounds="true"
             tools:ignore="ContentDescription" />
 
