--- a/app/src/main/res/layout/activity_prayers.xml
+++ b/app/src/main/res/layout/activity_prayers.xml
@@ -10,6 +10,7 @@
         android:id="@+id/prayers_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:overScrollMode="never"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.matthewtamlin.sliding_intro_screen_library.indicators.DotIndicator
