--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -23,7 +23,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_margin="@dimen/toolbar_progress_margin"
+                android:layout_marginTop="@dimen/toolbar_progress_margin"
+                android:layout_marginBottom="@dimen/toolbar_progress_margin"
                 android:visibility="gone" />
 
         </android.support.v7.widget.Toolbar>
