--- a/app/src/main/res/layout/item_prayer_with_title.xml
+++ b/app/src/main/res/layout/item_prayer_with_title.xml
@@ -47,7 +47,7 @@
                 android:fontFamily="sans-serif"
                 android:maxLines="1"
                 android:text="@string/placeholder"
-                android:textColor="@color/primary_text"
+                android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/text_size_primary" />
 
             <TextView
@@ -61,7 +61,7 @@
                 android:fontFamily="sans-serif"
                 android:maxLines="1"
                 android:text="@string/placeholder"
-                android:textColor="@color/secondary_text"
+                android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/text_size_secondary" />
 
             <TextView
@@ -72,7 +72,7 @@
                 android:layout_alignParentRight="true"
                 android:fontFamily="sans-serif"
                 android:text="@string/placeholder"
-                android:textColor="@color/primary_text"
+                android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/text_size_secondary"
                 tools:ignore="RelativeOverlap" />
 
