--- a/app/src/main/res/layout/item_places.xml
+++ b/app/src/main/res/layout/item_places.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_places_item_parent"
     android:layout_width="match_parent"
@@ -10,7 +9,7 @@
     android:focusable="true"
     android:minHeight="?attr/listPreferredItemHeight">
 
-    <RadioButton
+    <android.support.v7.widget.AppCompatRadioButton
         android:id="@+id/item_places_radio_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,7 +18,7 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:clickable="false"
         android:focusable="false"
-        app:buttonTint="@color/colorAccent" />
+        android:theme="@style/MyRadioButton" />
 
     <ImageView
         android:id="@+id/item_places_item_delete_icon"
