--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimary">#455A64</color>
     <color name="colorPrimaryDark">#455A64</color>
-    <color name="colorAccent">#4CAF50</color>
+    <color name="colorAccent">#448AFF</color>
     <color name="primary_text">#D9000000</color>
     <color name="app_bar_main_text">#D9FFFFFF</color>
     <color name="app_bar_secondary_text">#8CFFFFFF</color>
