--- a/app/src/main/res/layout/item_prayer.xml
+++ b/app/src/main/res/layout/item_prayer.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/transaction_item_parent"
+    android:id="@+id/prayer_item_parent"
     android:layout_width="match_parent"
     android:layout_height="?attr/listPreferredItemHeight">
 
     <View
-        android:id="@+id/item_prayer_divider"
+        android:id="@+id/item_prayer_title_divider"
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider"
         android:layout_marginLeft="@dimen/divider_padding"
         android:layout_marginStart="@dimen/divider_padding"
         android:background="@color/divider_black"
+        tools:ignore="RtlSymmetry" />
+
+    <View
+        android:id="@+id/item_prayer_day_divider"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider"
+        android:background="@color/divider_black"
+        android:visibility="gone"
         tools:ignore="RtlSymmetry" />
 
     <LinearLayout
@@ -32,14 +40,15 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            tools:ignore="RtlSymmetry">
 
             <TextView
                 android:id="@+id/item_prayer_name_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:ellipsize="middle"
                 android:fontFamily="sans-serif"
                 android:maxLines="1"
@@ -52,8 +61,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/item_prayer_name_text_view"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:ellipsize="middle"
                 android:fontFamily="sans-serif"
                 android:maxLines="1"
