--- a/app/src/main/res/layout/item_prayer_with_title.xml
+++ b/app/src/main/res/layout/item_prayer_with_title.xml
@@ -1,84 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingEnd="@dimen/activity_horizontal_margin"
-    android:paddingStart="@dimen/activity_horizontal_margin">
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/prayers_day_text_view"
+        android:id="@+id/prayers_schedule_sub_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_vertical"
         android:minHeight="?attr/listPreferredItemHeightSmall"
-        android:text="@string/placeholder"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:text="@string/schedule_title"
         android:textColor="@color/secondary_text"
         android:textSize="@dimen/text_size_secondary" />
 
-    <LinearLayout
-        android:id="@+id/transaction_item_parent"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/listPreferredItemHeight"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/prayer_icon_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:adjustViewBounds="true"
-            tools:ignore="ContentDescription" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/item_prayer_name_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:ellipsize="middle"
-                android:fontFamily="sans-serif"
-                android:maxLines="1"
-                android:text="@string/placeholder"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_size_primary" />
-
-            <TextView
-                android:id="@+id/item_prayer_english_name_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/item_prayer_name_text_view"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:ellipsize="middle"
-                android:fontFamily="sans-serif"
-                android:maxLines="1"
-                android:text="@string/placeholder"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_size_secondary" />
-
-            <TextView
-                android:id="@+id/item_prayer_time_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:fontFamily="sans-serif"
-                android:text="@string/placeholder"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_size_secondary"
-                tools:ignore="RelativeOverlap" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
+    <include layout="@layout/item_prayer" />
 
 </LinearLayout>
 
