-changed package name to "miqat" -reverse geolocation error handling -preferences activity, first commit -taking method, school ino account while fetching and listing -styling fixes, radio button and title colors -fully localized into arabic -supports rtl layout -updated intro screen; added "MiQat" definition

--- a/app/src/main/res/layout-ar/item_places.xml
+++ b/app/src/main/res/layout-ar/item_places.xml
@@ -44,7 +44,7 @@
         android:layout_toRightOf="@id/item_places_radio_button"
         android:layout_toStartOf="@id/item_places_item_delete_icon"
         android:ellipsize="end"
-        android:gravity="left"
+        android:gravity="right"
         android:text="@string/placeholder"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         tools:ignore="RtlHardcoded" />
