--- a/app/src/main/res/layout/item_prayer.xml
+++ b/app/src/main/res/layout/item_prayer.xml
@@ -25,15 +25,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/activity_horizontal_margin">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/prayer_icon_image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/basic_padding"
+            android:layout_marginStart="@dimen/basic_padding"
             android:adjustViewBounds="true"
             tools:ignore="ContentDescription" />
 
@@ -41,8 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingStart="@dimen/activity_horizontal_margin"
             tools:ignore="RtlSymmetry">
 
             <TextView
@@ -74,6 +72,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
+                android:layout_marginEnd="@dimen/basic_padding"
+                android:layout_marginStart="@dimen/basic_padding"
                 android:fontFamily="sans-serif"
                 android:text="@string/placeholder"
                 android:textColor="@color/colorPrimary"
