--- a/app/src/main/res/menu/activity_prayers_menu.xml
+++ b/app/src/main/res/menu/activity_prayers_menu.xml
@@ -8,8 +8,8 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_libraries"
-        android:title="@string/action_libraries"
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
         app:showAsAction="never" />
 
 </menu>
