--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,7 @@
     <dimen name="divider_padding">68dp</dimen>
     <dimen name="connection_error_icon">68dp</dimen>
     <dimen name="toolbar_progress_margin">16dp</dimen>
+    <dimen name="basic_padding">16dp</dimen>
+    <dimen name="basic_padding_small">8dp</dimen>
 
 </resources>
